fix: fix button and switch alignment. do not update display when power off.

--- a/DrumMachine/styles.css
+++ b/DrumMachine/styles.css
@@ -64,3 +64,10 @@ main {
   height: 25vh;
   width: 100%;
 }
+
+.btn-switch-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
